# MA_PLOTTING

./: .gitignore  CMakeLists.txt  README.md  a.out  h1_AbsSystematic_FitRangeVari_EG1.root  h1_AbsSystematic_MethodVari_EG1.root  h1_AbsSystematic_MethodVari_EG2.root  h1_CorrYield_DataOmegaRotPS_Pol2_EG2_Copy.root  h1_CorrYield_DataOmegaTGPSPS_HighFitVari_Pol2_EG1_Copy.root  h1_CorrYield_DataOmegaTGPSPS_HighFitVari_Pol2_EG2_Copy.root  h1_CorrYield_DataOmegaTGPSPS_LowFitVari_Pol2_EG1_Copy.root  h1_CorrYield_DataOmegaTGPSPS_LowFitVari_Pol2_EG2_Copy.root  h1_CorrYield_DataOmegaTGPSPS_Pol2_EG1_Copy.root  h1_CorrYield_DataOmegaTGPSPS_Pol2_EG2_Copy.root  h1_CorrYield_DataOmegaTGPSPS_Pol3_EG2_Copy.root  h1_CorrYield_DataPi0TGPSPS_Pol2_EG1_Copy.root  h1_CorrYield_DataPi0TGPSPS_Pol2_EG2_Copy.root  h1_RelSystematic_FitRangeVari_EG1.root  h1_RelSystematic_MethodVari_EG1.root  h1_RelSystematic_MethodVari_EG2.root  h1_Systematic_FitRangeVari_EG1.root  h1_Systematic_MethodVari_EG1.root  h1_Systematic_MethodVari_EG2.root  start_plotting.sh  test  test.root
include/: BeforeScaling.hpp  Chi2Test.hpp  FitAfterScaling.hpp  OnlyPeaks.hpp  PeakComp.hpp  Peaks.hpp  Plot.h  Plot0.h  PrepareHeader.hpp  QAPlots.hpp  SameEventToBackgroundRatio.hpp  ScaleWithUncer.hpp  SignalToBackground.hpp  SignificanceMC.hpp  StatThermModel.hpp  Systematics.hpp  YieldScaling.hpp  Yields.hpp  YieldsData.hpp  main.hpp  plotting.hpp  plottingheader.hpp  test.hpp
src/: main.cxx
